<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/scores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/style1"
                    android:background="#1A237E"
                    android:gravity="center_horizontal"
                    android:text="@string/TeamA"
                    android:textColor="#B71C1C" />

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/style2"
                    android:gravity="center_horizontal"
                    android:text="@string/Score" />


                <Button
                    style="@style/style3"
                    android:onClick="addSixForTeamA"
                    android:text="@string/Touchdown" />

                <Button
                    style="@style/style3"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/FieldGoal" />

                <Button
                    style="@style/style3"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/SafeTry2" />

                <Button
                    style="@style/style3"
                    android:onClick="addOneForTeamA"
                    android:text="@string/Try1" />

            </LinearLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/style1"
                    android:background="#B71C1C"
                    android:gravity="center_horizontal"
                    android:text="@string/TeamB"
                    android:textColor="#1A237E" />

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/style2"
                    android:gravity="center_horizontal"
                    android:text="@string/Score" />

                <Button
                    style="@style/style3"
                    android:onClick="addSixForTeamB"
                    android:text="@string/Touchdown" />

                <Button
                    style="@style/style3"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/FieldGoal" />

                <Button
                    style="@style/style3"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/SafeTry2" />

                <Button
                    style="@style/style3"
                    android:onClick="addOneForTeamB"
                    android:text="@string/Try1" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fouls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scores"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/foulA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="#b55b0418"
                android:onClick="foulTeamA"
                android:text="@string/foul"
                android:textSize="32sp" />

            <Button
                android:id="@+id/foulB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="#b55b0418"
                android:onClick="foulTeamB"
                android:text="@string/foul"
                android:textSize="32sp" />

        </LinearLayout>

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fouls"
            android:layout_centerHorizontal="true"
            android:background="#b50b1e7b"
            android:onClick="resetScore"
            android:text="@string/reset"
            android:textColor="#ded948" />

    </RelativeLayout>
</ScrollView>